# Dijkstras-algorithm

./: .gitignore  CMakeLists.txt  README.md  clean.sh  configure.sh  test.sh
Dijkstra/: CMakeLists.txt
Dijkstra/inc/: dijkstra.h
Dijkstra/src/: dijkstra.cc
Dijkstra/test/: CMakeLists.txt
Dijkstra/test/src/: dijkstra_test.cc
